finished presentation draft, report figures positioning

--- a/presentation/bibliography.bib
+++ b/presentation/bibliography.bib
@@ -1,5 +1,20 @@
 % Encoding: UTF-8
 
+@inproceedings{garg2019sequence,
+  title={Sequence and time aware neighborhood for session-based recommendations: Stan},
+  author={Garg, Diksha and Gupta, Priyanka and Malhotra, Pankaj and Vig, Lovekesh and Shroff, Gautam},
+  booktitle={Proceedings of the 42nd International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={1069--1072},
+  year={2019}
+}
+
+@article{hidasi2015session,
+  title={Session-based recommendations with recurrent neural networks},
+  author={Hidasi, Bal{\'a}zs and Karatzoglou, Alexandros and Baltrunas, Linas and Tikk, Domonkos},
+  journal={arXiv preprint arXiv:1511.06939},
+  year={2015}
+}
+
 @inproceedings{hinton2002stochastic,
   title={Stochastic neighbor embedding},
   author={Hinton, Geoffrey and Roweis, Sam T},
@@ -8,6 +23,65 @@
   pages={833--840},
   year={2002},
   organization={Citeseer}
+}
+
+@inproceedings{jannach2017recurrent,
+  title={When recurrent neural networks meet the neighborhood for session-based recommendation},
+  author={Jannach, Dietmar and Ludewig, Malte},
+  booktitle={Proceedings of the Eleventh ACM Conference on Recommender Systems},
+  pages={306--310},
+  year={2017}
+}
+
+@article{latifi2021session,
+  title={Session-aware recommendation: A surprising quest for the state-of-the-art},
+  author={Latifi, Sara and Mauro, Noemi and Jannach, Dietmar},
+  journal={Information Sciences},
+  volume={573},
+  pages={291--315},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{ludewig2018evaluation,
+  title={Evaluation of session-based recommendation algorithms},
+  author={Ludewig, Malte and Jannach, Dietmar},
+  journal={User Modeling and User-Adapted Interaction},
+  volume={28},
+  number={4-5},
+  pages={331--390},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{ludewig2021empirical,
+  title={Empirical analysis of session-based recommendation algorithms},
+  author={Ludewig, Malte and Mauro, Noemi and Latifi, Sara and Jannach, Dietmar},
+  journal={User Modeling and User-Adapted Interaction},
+  volume={31},
+  number={1},
+  pages={149--181},
+  year={2021},
+  publisher={Springer}
+}
+
+@inproceedings{quadrana2017personalizing,
+  title={Personalizing session-based recommendations with hierarchical recurrent neural networks},
+  author={Quadrana, Massimo and Karatzoglou, Alexandros and Hidasi, Bal{\'a}zs and Cremonesi, Paolo},
+  booktitle={Proceedings of the Eleventh ACM Conference on Recommender Systems},
+  pages={130--137},
+  year={2017}
+}
+
+@article{stachl2020predicting,
+  title={Predicting personality from patterns of behavior collected with smartphones},
+  author={Stachl, Clemens and Au, Quay and Schoedel, Ramona and Gosling, Samuel D and Harari, Gabriella M and Buschek, Daniel and V{\"o}lkel, Sarah Theres and Schuwerk, Tobias and Oldemeier, Michelle and Ullmann, Theresa and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={117},
+  number={30},
+  pages={17680--17687},
+  year={2020},
+  publisher={National Acad Sciences}
 }
 
 @misc{phonedata,
