--- a/presentation/bibliography.bib
+++ b/presentation/bibliography.bib
@@ -65,6 +65,13 @@
   publisher={Springer}
 }
 
+@article{mi2018context,
+  title={Context tree for adaptive session-based recommendation},
+  author={Mi, Fei and Faltings, Boi},
+  journal={arXiv preprint arXiv:1806.03733},
+  year={2018}
+}
+
 @inproceedings{quadrana2017personalizing,
   title={Personalizing session-based recommendations with hierarchical recurrent neural networks},
   author={Quadrana, Massimo and Karatzoglou, Alexandros and Hidasi, Bal{\'a}zs and Cremonesi, Paolo},
